trunk/Archive2/ce/29b51982eea9a5/output
main.cpp:21:5: error: no matching constructor for initialization of 'std::vector<std::tuple<const char *, int, int> >'
    {
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/stl_vector.h:264:7: note: candidate constructor not viable: cannot convert initializer list argument to 'const allocator_type' (aka 'const std::allocator<std::tuple<const char *, int, int> >')
      vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/stl_vector.h:277:7: note: candidate constructor not viable: cannot convert initializer list argument to 'size_type' (aka 'unsigned long')
      vector(size_type __n, const allocator_type& __a = allocator_type())
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/stl_vector.h:318:7: note: candidate constructor not viable: cannot convert initializer list argument to 'const std::vector<std::tuple<const char *, int, int>, std::allocator<std::tuple<const char *, int, int> > >'
      vector(const vector& __x)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/stl_vector.h:335:7: note: candidate constructor not viable: cannot convert initializer list argument to 'std::vector<std::tuple<const char *, int, int>, std::allocator<std::tuple<const char *, int, int> > >'
      vector(vector&& __x) noexcept
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/stl_vector.h:373:7: note: candidate constructor not viable: no known conversion from 'const char [6]' to 'std::tuple<const char *, int, int>' for 1st argument
      vector(initializer_list<value_type> __l,
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/stl_vector.h:401:9: note: candidate constructor template not viable: requires at least 2 arguments, but 1 was provided
        vector(_InputIterator __first, _InputIterator __last,
        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/stl_vector.h:253:7: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
      vector()
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/stl_vector.h:339:7: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
      vector(const vector& __x, const allocator_type& __a)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/stl_vector.h:348:7: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
      vector(vector&& __rv, const allocator_type& __m)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/bits/stl_vector.h:289:7: note: candidate constructor not viable: requires at least 2 arguments, but 1 was provided
      vector(size_type __n, const value_type& __value,
      ^
1 error generated.
